--- a/pom.xml
+++ b/pom.xml
@@ -50,13 +50,13 @@
     <dependency>
       <groupId>org.apache.olingo</groupId>
       <artifactId>olingo-odata2-api</artifactId>
-      <version>2.0.0</version>
+      <version>2.0.2-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.olingo</groupId>
       <artifactId>olingo-odata2-core</artifactId>
-      <version>2.0.0</version>
+      <version>2.0.2-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
