--- a/pom.xml
+++ b/pom.xml
@@ -48,15 +48,30 @@
 
   <dependencies>
     <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-core</artifactId>
+      <version>2.3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-impl</artifactId>
+      <version>2.3.0</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.olingo</groupId>
       <artifactId>olingo-odata2-api</artifactId>
-      <version>2.0.2-SNAPSHOT</version>
+      <version>2.0.11</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.olingo</groupId>
       <artifactId>olingo-odata2-core</artifactId>
-      <version>2.0.2-SNAPSHOT</version>
+      <version>2.0.11</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
